Movie Lists done

--- a/frontend/src/components/movieCard/movieCard.css
+++ b/frontend/src/components/movieCard/movieCard.css
@@ -1,4 +1,4 @@
-.cards {
+.movieCard   {
     display: inline-block;
     transition: transform .2s;
     position: relative;
@@ -6,57 +6,116 @@
     overflow: hidden;
     margin: 0.19rem;
     cursor:pointer;
-    min-width:200px;
-    height:300px;
+    /* min-width:200px;
+    height:300px; */
     z-index:0;
     border: 1px solid rgb(99, 99, 99);
 }
 
-.cards:hover {
-    transform: scale(1.2);
+.movieCard:hover {
+    transform: scale(1.1);
     z-index: 1000;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.cards__img {
-    height: 300px;
+.movieCard__img {
+    /* height: 300px; */
 }
 
-.cards__overlay {
+.movieCard__overlay {
     position: absolute;
-    padding: 0 1rem 1rem 1rem;
+    /* padding: 0 1rem 1rem 1rem; */
     bottom: 0px;
-    height: 290px;
+    /* height: 290px; */
     display: flex;
     flex-direction: column;
-    width: 85%;
+    /* width: 85%; */
     justify-content: flex-end;
     background-image: linear-gradient(rgb(0,0,0,0), rgb(0,0,0,1));
     opacity: 0;
     transition: opacity .2s;
 }   
 
-.cards__overlay:hover {
+.movieCard__overlay:hover {
     opacity: 1;
 }
 
-.card__title {
+.movieCard__title {
     font-weight: 900;
     font-size: 1rem;
     margin-bottom: 0.4rem;
 }
 
-.card__runtime {
+.movieCard__runtime {
     font-size: .75rem;
     margin-bottom: 0.25rem;
 }
 
-.card__rating {
+.movieCard__rating {
     float: right;
 }
 
-.card__description {
+.movieCard__description {
     font-style: italic;
     font-size: .75rem;
     margin-bottom: 0.25rem;
+}
+
+@media (min-width: 768px) {
+    .movieCard {
+        min-width: 200px;
+        height: 300px;
+    }
+
+    .movieCard__img {
+        height: 300px;
+    }
+
+    .movieCard__overlay {
+        height: 290px;
+        width: 85%;
+        padding: 0 1rem 1rem 1rem;
+    }
+
+    .movieCard__title {
+        font-size: 1rem;
+    }
+
+    .movieCard__runtime {
+        font-size: .75rem;
+    }
+
+    .movieCard__description {
+        font-size: .75rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .movieCard {
+        min-width: 100px;
+        height: 150px;
+    }
+
+    .movieCard__img {
+        height: 100%;
+    }
+
+    .movieCard__overlay {
+        height: 150px;
+        width: 95%;
+        margin: 0px;
+        padding: 5px;
+    }
+
+    .movieCard__title {
+        font-size: 0.6rem;
+    }
+
+    .movieCard__runtime {
+        font-size: 0.4rem;
+    }
+
+    .movieCard__description {
+        font-size: 0.4rem;
+    }
 }
