--- a/frontend/src/components/navbar/header.css
+++ b/frontend/src/components/navbar/header.css
@@ -21,8 +21,6 @@ a > span{
     color: white;
 }
 
-
-
 a > span:hover {
     color: rgb(120, 115, 115);
     /* border: 1px solid rgb(255, 255, 255); */
@@ -30,15 +28,55 @@ a > span:hover {
     /* transform: scale(1.1); */
 }
 
+.header-icon {
+    width: 7rem;
+    cursor: pointer;
+    margin-right: 2rem;
+}
+
+.user__avatar {
+    font-size: 2rem;
+}
+
+.h-btn {
+    transition: scale(1.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.6rem 0rem;
+    border-radius: 1.2rem;
+    border-color: white;
+    border: 2px solid rgb(156, 156, 156);
+    cursor: pointer;
+    background-color: #1f1f1f;
+    color: white;
+    font-size: 1rem;
+    margin: 0 1rem;
+}
+
 @media (max-width: 768px) {
+    .h-btn {
+        font-size: 0.4rem;
+        /* margin: 0 0.5rem; */
+        padding: 0.2rem 0rem;
+        margin: 0 0.6rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .header {
+        margin: 0 0 0 1.5rem;
+        margin-left: 1rem;
+        padding: 0.7rem 0;
+        min-width: 1rem;
+    }
+
     a > span{
-        margin: 0 1rem;
-        font-size: 0.7rem;
+        margin: 0 0.8rem;
+        font-size: 0.4rem;
         cursor: pointer;
         color: white;
     }
-    
-    
     
     a > span:hover {
         color: rgb(120, 115, 115);
@@ -46,13 +84,13 @@ a > span:hover {
         /* padding: 4px 4px 4px 4px; */
         /* transform: scale(1.1); */
     }
+
+    .header-icon {
+        width: 3.5rem;
+        margin-right: 0.4rem;
+        border-radius: 1px solid black;
+        border-radius: 8%;
+    }
 }
 
-.header-icon {
-    width: 5rem;
-    cursor: pointer;
-}
 
-.user__avatar {
-    font-size: 2rem;
-}
