--- a/frontend/src/pages/homePage/home.css
+++ b/frontend/src/pages/homePage/home.css
@@ -1,3 +1,18 @@
+.home-movies{
+  /* place-content: space-evenly;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column; */
+  /* width: 100%; */
+}
+.home-movies1 {
+  /* display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly; 
+  align-items: center;  */
+}
+
 .movie-img{
     height: auto;
 }
