--- a/frontend/src/components/navbar/header.css
+++ b/frontend/src/components/navbar/header.css
@@ -7,6 +7,8 @@
     display: flex;
     justify-content:space-between;
     min-width: 1rem;
+    /* position: absolute;
+    z-index: 1000; */
 }
 
 .headerl, .headerr {
