--- a/frontend/src/pages/moviePage/movie.css
+++ b/frontend/src/pages/moviePage/movie.css
@@ -7,19 +7,19 @@
 }
 
 .movie__intro {
-    width: 80%;
+    width: 100%;
 }
 
 .movie__backdrop {
     width: 100%;
-    height: 500px;
+    height: 600px;
     object-fit:cover;
     object-position: 0 35%;
 }
 
 .movie__detail {
     align-items: center;
-    width: 75%;
+    width: 85%;
     display: flex;
     position: relative;
     bottom: 225px;
@@ -91,11 +91,12 @@
     bottom: 120px;
     display: flex;
     justify-content: space-between;
-    width: 75%;
+    width: 85%;
 }
 
 .movie__heading {
     font-size: 2.2rem;
+    font-weight: bold;
 }
 
 .movie__Button {
@@ -128,6 +129,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    justify-content: space-evenly;
     margin-bottom: 4rem;
 }
 
@@ -142,4 +144,52 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.yt_vid{
+    width: 640px;
+    height: 360px;
+
+}
+
+.movie_links{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin: 1rem;
+
+}
+
+@media screen and (max-width: 768px) {
+    .movie__detail {
+        flex-direction: column;
+        bottom: 0;
+    }
+
+    .movie__detailRight {
+        height: auto;
+        align-items: center;
+        text-align: center;
+    }
+
+    .movie__detailRightTop {
+        text-align: center;
+    }
+
+    .movie__detailRightBottom {
+        margin: 1rem 0;
+    }
+
+    .movie__links {
+        bottom: 0;
+    }
+
+    .movie__production {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .productionCompanyImage {
+        
+    }
 }
