--- a/frontend/src/components/navbar/header.css
+++ b/frontend/src/components/navbar/header.css
@@ -58,7 +58,7 @@ a > span:hover {
 
 @media (max-width: 768px) {
     .h-btn {
-        font-size: 0.4rem;
+        /* font-size: 0.7rem; */
         /* margin: 0 0.5rem; */
         padding: 0.2rem 0rem;
         margin: 0 0.6rem;
@@ -74,10 +74,11 @@ a > span:hover {
     }
 
     a > span{
-        margin: 0 0.8rem;
+        margin: 0 0.6rem;
         font-size: 0.4rem;
         cursor: pointer;
         color: white;
+        padding: 0rem 0.1rem;
     }
     
     a > span:hover {
