--- a/frontend/src/pages/moviePage/movie.css
+++ b/frontend/src/pages/moviePage/movie.css
@@ -74,7 +74,7 @@
     flex: 0.8;
 }
 
-.synopsisText {
+.synopsisText_Heading {
     font-size: 1.5rem;
     margin-bottom: 1.25rem;
     font-weight: 600;
@@ -82,8 +82,15 @@
     position: relative;
     align-items: center;
 }
-.synopsisText > div:last-of-type {
+.synopsisText_Heading > div:last-of-type {
     margin-left: auto;
+}
+
+.synopsisText{
+    font-size: 1.2rem;
+    line-height: 1.5;
+    margin-bottom: 1.25rem;
+
 }
 
 .movie__links {
@@ -109,15 +116,88 @@
     width: 150px;
     color: black;
     font-weight: bold;
+    display: block;
+    color: white;
+    border: none;
+    background: none;
+    vertical-align: middle;
+    position: relative;
+    z-index: 1;
+    border: 3px solid white;
+    font-family: 'Poppins', sans-serif;
+    /* -webkit-backface-visibility: hidden; */
+    -moz-osx-font-smoothing: grayscale;
+    margin-top: -15px;
+    overflow: hidden;
+    /* -webkit-transition: border-color 0.3s, color 0.3s; */
+    transition: border-color 0.3s, color 0.3s;
+    /* -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1); */
+    transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);  
 }
 
-.movie__homeButton {
-    background-color:rgb(255, 0, 0);
-    
+.movie__homeButton{
+    /* display: block;
+    color: white;
+    border: none;
+    background: none;
+    vertical-align: middle;
+    position: relative;
+    z-index: 1;
+    border: 3px solid white;
+    font-family: 'Poppins', sans-serif;
+    -webkit-backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    margin-top: -15px;
+    overflow: hidden;
+    -webkit-transition: border-color 0.3s, color 0.3s;
+    transition: border-color 0.3s, color 0.3s;
+    -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+    transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);     */
 }
+  .movie__Button:focus {
+    outline: none;
+  }
+  .movie__Button > span {
+    vertical-align: top;
+    svg {
+      vertical-align: top;
+    }
+  }
+  .movie__Button::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 150%;
+    height: 100%;
+    background: #37474f;
+    z-index: -1;
+    /* -webkit-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -3em, 0); */
+    transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -3em, 0);
+    /* -webkit-transform-origin: 0% 100%; */
+    transform-origin: 0% 100%;
+    /* -webkit-transition: -webkit-transform 0.3s, opacity 0.3s, background-color 0.3s; */
+    transition: transform 0.3s, opacity 0.3s, background-color 0.3s;
+  }
+  .movie__Button:hover {
+    color: black;
+    border-color: white;
+    cursor: pointer;
+  }
+  .movie__Button:hover::before {
+    opacity: 1;
+    background-color: white;
+    /* -webkit-transform: rotate3d(0, 0, 1, 0deg); */
+    transform: rotate3d(0, 0, 1, 0deg);
+    /* -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1); */
+    transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  }
 
 .movie__imdbButton {
     background-color:#f3ce13;
+    color:#000000;
+    border: 3px solid transparent;
+
 }
 
 .newTab {
@@ -134,7 +214,7 @@
 }
 
 
-.movie__productionComapany {
+.movie__productionCompany {
     width: 200px;
     margin: 2rem;
 }
@@ -149,7 +229,8 @@
 .yt_vid{
     width: 640px;
     height: 360px;
-
+    border-radius: 10px;
+    background-color: transparent;
 }
 
 .movie_links{
@@ -161,9 +242,22 @@
 }
 
 @media screen and (max-width: 768px) {
+    .movie__backdrop{
+        height: 250px;
+    }
+
+    .movie__poster{
+        width: 110px;
+    }
+
     .movie__detail {
         flex-direction: column;
-        bottom: 0;
+        bottom: 110px;
+        margin-bottom: 0%;
+    }
+    .movie__detailLeft {
+        margin-right: 0;
+        margin-bottom: 1rem;
     }
 
     .movie__detailRight {
@@ -174,6 +268,7 @@
 
     .movie__detailRightTop {
         text-align: center;
+        font-size: medium;
     }
 
     .movie__detailRightBottom {
@@ -188,8 +283,95 @@
         flex-direction: column;
         align-items: center;
     }
+
+    .movie__name{
+        font-size: 1.3rem;
+    }
+
+    .movie__rating{
+
+    }
+
+    .movie__tagline{
+
+    }
     
-    .productionCompanyImage {
-        
+    .movie__runtime{
+
+    }
+
+    .movie__releaseDate{
+
+    }
+
+    .movie__genres{
+        margin: 1.25rem 0;
+    }
+
+    .movie__genre{
+        padding: .5rem;
+        border: 1px solid white;
+        border-radius: 20px;
+        margin-right: 1rem;
+        font-size: small;
+    }
+
+    .synopsisText_Heading{
+        display: inline-block;
+    }
+
+    .synopsisText{
+
+    }
+
+    .movie__links{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        /* margin: 1rem; */
+        align-items: center;
+        margin-bottom: 1.5rem;
+    }
+
+    .movie__heading{
+        font-size: 1.5rem;
+    }
+
+    .yt_vid{
+        width: 100%;
+        height: 200px;
+        margin: 1rem 0rem 1rem 0rem;
+    }
+
+    .movie__imdbButton{
+        margin:auto;
+    }
+
+    .movie__homeButton{
+        margin:auto;
+    }
+
+    .movie__Button{
+        margin:0.5rem;
+        text-align: center;
+        width: 100px;
+        font-size: small;
+    }
+
+    .movie__production{
+        /* width: 40px; */
+    }
+
+    .movie__productionCompany {
+        width: 100px;
+        font-size: small;
+    }
+    
+    .movie__productionCompanyHeading {
+        font-size: small;
+    }
+
+    .movie__productionCompanyImage {
+        /* width: 100px; */
     }
 }
