--- a/frontend/src/components/movieCard/movieCard.css
+++ b/frontend/src/components/movieCard/movieCard.css
@@ -6,8 +6,9 @@
     overflow: hidden;
     margin: 0.19rem;
     cursor:pointer;
-    /* min-width:200px;
-    height:300px; */
+    /* min-width:200px; */
+    max-width:200px;
+    height:300px;
     z-index:0;
     border: 1px solid rgb(99, 99, 99);
 }
@@ -73,7 +74,7 @@
 
     .movieCard__overlay {
         height: 290px;
-        width: 85%;
+        width: 100%;
         padding: 0 1rem 1rem 1rem;
     }
 
@@ -102,7 +103,7 @@
 
     .movieCard__overlay {
         height: 150px;
-        width: 95%;
+        width: 100%;
         margin: 0px;
         padding: 3px;
     }
