--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,4 +6,5 @@
 html, body, #root, .App {
   background-color: #242424;
   min-height: 100%;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
 }
