--- a/frontend/src/pages/login-registerPage/login-register.css
+++ b/frontend/src/pages/login-registerPage/login-register.css
@@ -19,4 +19,173 @@ label{
 .nav-tabs .nav-link .active, .nav-tabs .nav-item.show .nav-link {
   /* background-color: transparent; */
 }
-  
+
+.image-div {
+  margin-bottom: 0.5rem; /* You can adjust the value as needed */
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 0.5rem; /* You can adjust the value as needed */
+  /* width: 6rem; 
+  height: 6rem;  */
+}
+
+
+.image-container {
+  /* position: relative; */
+  height: 6rem;
+  width: auto;
+}
+
+.svg-container {
+  /* position: relative; */
+  height: 10rem;
+  width: 10rem;
+  width: auto;
+}
+
+.image-relative {
+  position: relative;
+  height: 2rem;
+}
+
+.image-remove-button {
+  position: absolute;
+  /* top: 1px;
+  right: 1px;
+  text-align: center;
+  width: 5px;
+  height: 5px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out; */
+}
+
+.image-remove-button:hover {
+  opacity: 1;
+}
+
+.image-rounded-lg {
+  border-radius: 0.375rem;
+}
+
+.spinner-container {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  justify-content: center;
+  padding: 1px;
+  background-color: #f3f4f6;
+  border-radius: 0.375rem;
+}
+
+.animate-spin {
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.custom-label {
+  width: 6rem;
+  height: 6rem;
+  border: 1px solid #d1d5db;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.875rem;
+  color: #6b7280;
+  border-radius: 1.5rem;
+  background-color: #e5e7eb;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer; 
+}
+
+.custom-label svg {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-right: 0.5rem; 
+}
+
+.custom-label .add-text {
+  display: flex; 
+  align-items: center; 
+  /* color: #28292c; */
+}
+
+
+.custom-file-input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+}
+
+.image-div {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2px;
+}
+
+.image-container {
+  width: 100px; 
+  height: 100px; 
+  border-radius: 15px;
+  overflow: hidden;
+  position: relative;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+}
+
+.spinner-container {
+  width: 6rem;
+  height: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.remove-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background-color: red;
+  border: none;
+  border-radius: 50%;
+  padding: 0px; 
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  height: 20px;
+  width: 20px;
+}
+
+.remove-button {
+  position: absolute;
+  top: -12px;
+  right: 5px;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  z-index: 1;
+}
+
+.remove-button svg {
+  width: 100%;
+  height: 100%;
+  padding: 4px;
+  background-color: rgb(255, 1, 1);
+  border-radius: 50%;
+  transition: background-color 0.3s ease;
+}
+
+.image-container:hover .remove-button {
+  opacity: 1;
+}
