--- a/frontend/src/components/movieList/movieList.css
+++ b/frontend/src/components/movieList/movieList.css
@@ -51,3 +51,66 @@
         margin: 0px;
     }
 }
+
+/* movieList.css */
+
+.movieList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .title {
+    font-size: 2rem;
+    margin: 20px 0;
+  }
+  
+  .list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+  }
+  
+  .loadMoreCard {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 300px;
+    margin: 10px;
+    border: 1px solid rgb(99, 99, 99);
+    border-radius: 10px;
+    cursor: pointer;
+    transition: transform .2s;
+  }
+  
+  .loadMoreCard:hover {
+    transform: scale(1.1);
+    z-index: 1000;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  }
+  
+  .loadMoreCard__content {
+    text-align: center;
+  }
+  
+  .loadMoreCard__plus {
+    font-size: 3rem;
+    font-weight: bold;
+  }
+  
+  .loadMoreCard__text {
+    font-size: 1.5rem;
+  }
+  
+  .noMoreMoviesMessage {
+    font-size: 1.5rem;
+    margin: 20px;
+  }
+  
+  .loadingMessage {
+    font-size: 1.5rem;
+    margin: 20px;
+  }
+  
